Fix markdown rendering
This solution is not great and should be replaced